# efscape-gis

./: ChangeLog  Makefile.am  README  configure.ac
pkgconfig/: efscape-gis.pc.in
src/efscape/: Makefile.am
src/efscape/gis/: GDALWrapper.hh  GeoDataSource.hpp  GeoNetCDF.cc  GeoNetCDF.hh  Geogrid.cc  Geogrid.hh  Geogrid_impl.hh  Geogrid_impl.ipp  LandscapeI.cpp  LandscapeI.hpp  Makefile.am  gdal_utils.cpp  gdal_utils.hpp
src/efscape/gis/TestCode/: Makefile.am  TestCode.cc  main.cc
